<resources>
    <string name="app_name">微片</string>
    <string name="hello_world">Hello world!</string>
    <string name="mytip_info_company_name">福建玛雅软件科技有限公司</string>
    <string name="mytip_info_company_en_name">FuJian Maya Software Technology Co.,Ltd</string>
    <string name="mytip_info_company_about">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;福建玛雅软件科技有限公司，简称玛雅软件，成立于2012年12月21日玛雅预言中的“世界末日”。这天是玛雅历法中第四太阳纪的末日，也是第五太阳纪的开始，蕴含世间万物 “毁灭与重生”之轮回大道。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;玛雅软件以“畅想科技开发中心”技术力量为主体，主要致力于移动互联网领域的传统商务社交“无纸化”应用工具的开发和运营，也是全球领先的移动互联网电子名片应用服务商和企业电子画册应用服务商。 \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;志存高远，锐意进取。我们秉承“客户服务价值优先”的经营理念，坚守“简单、专注、激情、共享”的企业精神，引进现代企业管理机制，追求完善的客户体验服务并致力于帮助他人成功，树立一种社会效益和经济效益双赢的企业价值观，借以成为一个真正的人本化先进团队。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一张名片的交换，一棵树木倒下；一本画册的问世，一片森林倒下。为了我们的家园，请节约纸张，绿色商务，树会感谢你！“少砍一棵树，少用一张纸，守护绿色地球”是我们玛雅人最崇高的愿景和毕生追求!</string>
    <string name="mytip_info_company_telephone">0592&#8211;8264112</string>
    <string name="mytip_info_company_fax">0592&#8211;8264113</string>
    <string name="mytip_info_company_address">福州市工业路611号省高新技术科技创业园\n厦门市软件园二期望海路55号之二906室</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_base_fragment">BaseFragmentActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_loading_and_welcome">LoadingAndWelcomeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="title_activity_vcard_main">VCardMainActivity</string>
    <string name="title_activity_multi_main">MultiMainActivity</string>
    <string name="title_activity_add_vcard">AddVCardActivity</string>
    <string name="title_activity_unit_main">UnitMainActivity</string>
    <string name="title_activity_common_web">CommonWebActivity</string>
    <string name="title_activity_scan_qr_code">ScanQrCodeActivity</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_activity_vcard_swap_main">VCardSwapMainActivity</string>
    <string name="title_activity_cardcase_main">CardcaseMainActivity</string>
    <string name="title_activity_message_main">MessageMainActivity</string>
    <string name="title_activity_cardcase_detail_vcard">CardcaseDetailVCardActivity</string>
    <string name="title_activity_add_vcard_scan">AddVCardScanActivity</string>
    <string name="title_activity_add_vcard_scan_trim">AddVCardScanTrimActivity</string>
    <string name="double_back_to_exit">再按一次退出程序</string>
    <string name="validation_code">已验证</string>
    <string name="no_network">网络不给力</string>
    <string name="no_network_please_open_network">网络不给力，请打开你的网络！</string>
    <string name="vcard_is_uploading_please_waiting">名片正在上传，请稍候&#8230;</string>
    <string name="vcard_has_no_count">当前名片数量不足</string>
    <string name="doing_login_please_waiting">正在登录，请稍候&#8230;</string>
    <string name="doing_get_user_info_please_waiting">正在获取个人资料，请稍候&#8230;</string>
    <string name="add_my_vcard">添加我的名片</string>
    <string name="wec_my_vcard">微片欢迎您</string>
    <string name="add_my_vcard_message">请确保本次添加的名片是您本人的名片,确定之后该名片上的姓名将作为微片用户名,在以后编辑个人资料时姓名将不可更改&#8230;</string>
    <string name="my_card">我的名片</string>
    <string name="vcard_load_fail_hint">名片加载失败\n请检查网络或点击表情刷新页面</string>
    <string name="cardcase">名片夹</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="vcard">微片</string>
    <string name="unit_main">单位主页</string>
    <string name="recent_contact">最近联系</string>
    <string name="favorite">收藏夹</string>
    <string name="ungrouped">未分组</string>
    <string name="blacklist">黑名单</string>
    <string name="stranger">陌生人</string>
    <string name="sernor_fail_please_open_sernor">为更好的体验微片，请打开"传感器"权限</string>
    <string name="add_vcard">添加名片</string>
    <string name="who_hope_to_swap_card">%s希望与您交换名片</string>
    <string name="who_invite_who_join_group_chat">%1$s邀请%2$s加入了群聊</string>
    <string name="you_invite_who_join_group_chat">您邀请%s加入了群聊</string>
    <string name="no_get_system_notice">亲,目前还没收到系统通知哦&#8230;</string>
    <string name="group_chat">群聊</string>
    <string name="group_title">%1$s (%2$s人)</string>
    <string name="vcard_detail">名片详情</string>
    <string name="my_vcard">我的名片</string>
    <string name="add_vcard_scan_aim_at">请把取景框水平对准名片四个角</string>
    <string name="please_scan_vcard">请拍摄名片</string>
    <string name="please_scan_vcard_front">请拍摄名片正面</string>
    <string name="please_scan_vcard_back">请拍摄名片反面</string>
    <string name="vcard_trim_reading">名片识别中</string>
    <string name="vcard_trim_reading_front">名片正面识别中&#8230;</string>
    <string name="vcard_trim_reading_black">名片反面识别中&#8230;</string>
    <string name="vcard_cut_single_title">精确裁剪名片(单面)</string>
    <string name="vcard_cut_double_title_front">精确裁剪名片(正面)</string>
    <string name="vcard_cut_double_title_back">精确裁剪名片(反面)</string>
    <string name="again_scan">重&#160;&#160;拍</string>
    <string name="add_vcard_cut_prompt">点击边框线调整大小</string>
    <string name="vip_template">vip模板</string>
    <string name="integral">积分</string>
    <string name="wei_coins">微币</string>
    <string name="free_template">免费模板</string>
    <string name="agreement">使用条款和隐私政策</string>
    <string name="thanks">首页语:鸣谢</string>
    <string name="fuction_introduce">功能介绍</string>
    <string name="add_card_explain">添加名片技巧</string>
    <string name="green_public">一棵树•微公益</string>
    <string name="login_success">登录成功</string>
    <string name="qrcode_scan_change_hint">将对方名片二维码图案放在取景框内,\n即可自动扫描,实现名片交换</string>
    <string name="my_vcard_qrcode">我的二维码名片</string>
    <string name="please_login_first">请先登录</string>
    <string name="auth_failed">授权失败</string>
    <string name="auth_cancel">取消授权</string>
    <string name="share_success">分享成功</string>
    <string name="doing_register_please_wait">正在注册，请稍候&#8230;</string>
    <string name="vcard_num_max_is_three">最多只能添加三张名片</string>
    <string name="general_user_only_add_vcard_one">普通用户只能添加一张名片</string>
    <string name="new_user">新用户</string>
    <string name="new_login_suc">注册成功，欢迎加入微片！</string>
    <string name="register_success">注册成功</string>
    <string name="please_reset_password_first">请先设置登录密码</string>
    <string name="base_info_input">基本信息录入</string>
    <string name="please_input_base_info">请先录入基本信息</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="the_feature_is_not_yet_open">此功能尚未开放</string>
    <string name="join_official_website">加入微官网</string>
    <string name="no_operation_permissions">亲，您还没有操作权限哦</string>
    <string name="create_official_website">创建微官网</string>
    <string name="please_add_vcard">请先添加名片</string>
    <string name="please_choose_add_upload_vcard_form">请选择上传名片格式</string>
    <string name="frg_piece">张</string>
    <string name="frg_text_login">登录</string>
    <string name="frg_text_add">立即加入</string>
    <string name="frg_text_ok">确定</string>
    <string name="frg_text_cancel">取消</string>
    <string name="frg_common_nothing_data">暂无数据</string>
    <string name="frg_text_ok_time">确 定 (%d)</string>
    <string name="setting">设置</string>
    <string name="frg_setting_main_account">帐号设置</string>
    <string name="frg_setting_main_msg_warn_set">消息提醒设置</string>
    <string name="frg_setting_main_privacy">隐私设置</string>
    <string name="frg_setting_main_other">其它设置</string>
    <string name="frg_setting_main_recommend">热门推荐</string>
    <string name="frg_setting_main_share">分享给朋友</string>
    <string name="frg_setting_main_feedback">意见反馈</string>
    <string name="frg_setting_main_clear">清理缓存</string>
    <string name="frg_setting_main_about_vcard">关于微片</string>
    <string name="frg_setting_main_common_log_off">注销登录</string>
    <string name="frg_setting_account_vnumber">微号:&#160;</string>
    <string name="frg_setting_account_has_login">已登录</string>
    <string name="no_login">未登录</string>
    <string name="frg_setting_account_phone">手机号码</string>
    <string name="frg_setting_account_common_unbind">未绑定</string>
    <string name="have_bind">已绑定</string>
    <string name="change_bind">更换绑定</string>
    <string name="frg_setting_account_common_email">邮箱</string>
    <string name="frg_setting_account_alert_pwd">修改密码</string>
    <string name="frg_setting_account_protect">帐号保护</string>
    <string name="frg_setting_account_common_unlock">未开启</string>
    <string name="frg_setting_account_auto_associate_match_contact">自动关联匹配通讯录</string>
    <string name="frg_setting_account_auto_associate_warn">关联通讯录, 可以查找通讯录中使用微片的好友，通讯录好友也可查找到你, 但在通过验证之前, 无法查看你的微片资料。</string>
    <string name="frg_setting_notice_vcard_exchange_sound_effect">名片交换音效</string>
    <string name="frg_setting_notice_news_effect">新消息提示音</string>
    <string name="frg_setting_notice_sensitivity_setting">摇晃灵敏度设置</string>
    <string name="frg_setting_notice_manage_chat_log">管理聊天记录</string>
    <string name="frg_setting_notice_chat_log">聊天记录</string>
    <string name="current">当前:&#160;</string>
    <string name="current_integral">积分:&#160;</string>
    <string name="regular_members">普通会员</string>
    <string name="senior_member">高级会员</string>
    <string name="diamond_member">钻石会员</string>
    <string name="member_class_star_level_one">1星</string>
    <string name="member_class_star_level_two">2星</string>
    <string name="member_class_star_level_three">3星</string>
    <string name="member_class_star_level_four">4星</string>
    <string name="member_class_star_level_five">5星</string>
    <string name="member_class_integral_0">0</string>
    <string name="member_class_integral_100">100</string>
    <string name="member_class_integral_200">200</string>
    <string name="member_class_integral_300">300</string>
    <string name="member_class_integral_400">400</string>
    <string name="member_class_integral_500">500</string>
    <string name="member_class_integral_600">600</string>
    <string name="member_class_integral_700">700</string>
    <string name="member_class_integral_800">800</string>
    <string name="member_class_integral_900">900</string>
    <string name="member_class_integral_1000">1000</string>
    <string name="member_class_hint">个人星级越高所获得的权限就越多</string>
    <string name="understand_the_membership_grade">了解会员等级</string>
    <string name="how_to_promote_membership_grade">如何提升会员等级</string>
    <string name="how_to_get_a_card_and_integral">如何获得名片和积分</string>
    <string name="promote_zero_hint">(1)手机会员注册，成为普通会员(已验证)</string>
    <string name="promote_one_hint">(2)第三方授权登录注册,成为普通会员(已验证)</string>
    <string name="promote_two_hint">(3)用户短信推荐直接手机号码登录，成为普通会员(已验证)</string>
    <string name="promote_three_hint">(1)普通会员(已验证)推荐10位好友，升级为高级会员</string>
    <string name="promote_four_hint">(2)通过付费/包月成为高级会员</string>
    <string name="promote_five_hint">(1)高级会员(已验证)推荐50位好友，升级为高级会员</string>
    <string name="promote_six_hint">(2)通过付费/包月成为钻石会员</string>
    <string name="current_user_level">当前等级:&#160;</string>
    <string name="promote_bottom_content_hint">成功邀请一位朋友使用微片，您可以获得50张微片奖励，累计50个朋友加入微片，立即成为高级会员</string>
    <string name="promote_bottom_content_show_one">您已邀请了</string>
    <string name="promote_bottom_content_show_two">个朋友加入微片</string>
    <string name="promote_bottom_content_show_senior">离高级会员还差&#8230;</string>
    <string name="common_send_request">发送邀请</string>
    <string name="nav_msg_center">消息</string>
    <string name="pop_voice_start_speak">请开始说话</string>
    <string name="pop_voice_cancel_send">移至此区域取消发送</string>
    <string name="pop_voice_start_time">00:00</string>
</resources>