<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_148dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pop_voice"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_14dp"
    android:paddingBottom="@dimen/dimen_15dp">

    <TextView android:id="@+id/txv_pop_voice_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pop_voice_start_speak"
        style="@style/voice_chat_start"/>

    <ImageView android:id="@+id/imv_pop_voice_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:contentDescription="@string/nav_msg_center"
        android:src="@drawable/img_anim_pop_voice" />

    <TextView
        android:id="@+id/txv_pop_voice_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pop_voice_start_time"
        style="@style/voice_chat_start_time"/>

    <ImageView android:id="@+id/imv_pop_voice_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_13dp"
        android:contentDescription="@string/nav_msg_center"
        android:src="@mipmap/img_audio_delete"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_11dp"
        android:text="@string/pop_voice_cancel_send"
        style="@style/voice_chat_start_time"/>
</LinearLayout>
